--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "date-fns": "^2.14.0",
+    "gray-matter": "^4.0.2",
     "next": "9.3.5",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "remark": "^12.0.0",
+    "remark-html": "^11.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.20",
+    "@types/react": "^16.9.41",
+    "typescript": "^3.9.6"
   }
 }
